[gd_scene load_steps=4 format=2]

[ext_resource path="res://Transition.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Transition Screen" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Transition Screen"]
margin_right = 1450.0
margin_bottom = 1088.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Transition Screen/ColorRect"]
margin_left = 634.0
margin_top = 481.0
margin_right = 755.0
margin_bottom = 505.0
text = "YOU ARE DEAD"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition Screen"]
anims/RESET = SubResource( 1 )
anims/fade_to_black = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Transition Screen"]
anchor_right = 0.168
anchor_bottom = 0.469
margin_left = 561.0
margin_top = 567.0
margin_right = 603.08
margin_bottom = 32.48

[node name="try_again" type="Button" parent="Transition Screen/VBoxContainer"]
margin_right = 284.0
margin_bottom = 20.0
text = "Try again"

[node name="quit_game" type="Button" parent="Transition Screen/VBoxContainer"]
margin_top = 24.0
margin_right = 284.0
margin_bottom = 44.0
text = "Quit"

[connection signal="animation_finished" from="Transition Screen/AnimationPlayer" to="Transition Screen" method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Transition Screen/VBoxContainer/try_again" to="Transition Screen" method="_on_Try_again_pressed"]
[connection signal="pressed" from="Transition Screen/VBoxContainer/quit_game" to="Transition Screen" method="_on_Quit_game_pressed"]
